<resources>
    <string name="app_name">HighwayGo</string>
    <string name="txtViewSeats">View seats</string>
    <string name="txtQuantity">Quantity</string>
    <string name="txtBookedseats">Booked seats</string>
    <string name="txtSelectedSeats">Selected seats</string>
    <string name="txtEmptySeats">Empty seats</string>
    <string name="txtEntry">Entry</string>
    <string name="btn1">1</string>
    <string name="btn2">2</string>
    <string name="btn3">3</string>
    <string name="btn4">4</string>
    <string name="btn5">5</string>
    <string name="btn6">6</string>
    <string name="btn7">7</string>
    <string name="btn8">8</string>
    <string name="btn9">9</string>
    <string name="btn10">10</string>
    <string name="btn11">11</string>
    <string name="btn12">12</string>
    <string name="btn13">13</string>
    <string name="btn14">14</string>
    <string name="btn15">15</string>
    <string name="btn16">16</string>
    <string name="btn17">17</string>
    <string name="btn18">18</string>
    <string name="btn19">19</string>
    <string name="btn20">20</string>
    <string name="btn21">21</string>
    <string name="btn22">22</string>
    <string name="btn23">23</string>
    <string name="btn24">24</string>
    <string name="btn25">25</string>
    <string name="btn26">26</string>
    <string name="btn27">27</string>
    <string name="btn28">28</string>
    <string name="btn29">29</string>
    <string name="btn30">30</string>
    <string name="btnBookNow">Book now</string>

    <string name="txtSelectTheSeatAndQuantity">Select The Seat And Quantity</string>
    <string name="txtQuantityOne">Quantity</string>
    <string name="btnPlus">+</string>
    <string name="btnMinimize">-</string>
    <string name="txtBookedseatsOne">Booked seats</string>
    <string name="txtSelectedSeatsOne">Selected seats</string>
    <string name="txtEmptySeatsOne">Empty seats</string>
    <string name="txtEntryOne">Entry</string>
    <string name="btn1One">1</string>
    <string name="btn2One">2</string>
    <string name="btn3One">3</string>
    <string name="btn4One">4</string>
    <string name="btn5One">5</string>
    <string name="btn6One">6</string>
    <string name="btn7One">7</string>
    <string name="btn8One">8</string>
    <string name="btn9One">9</string>
    <string name="btn10One">10</string>
    <string name="btn11One">11</string>
    <string name="btn12One">12</string>
    <string name="btn13One">13</string>
    <string name="btn14One">14</string>
    <string name="btn15One">15</string>
    <string name="btn16One">16</string>
    <string name="btn17One">17</string>
    <string name="btn18One">18</string>
    <string name="btn19One">19</string>
    <string name="btn20One">20</string>
    <string name="btn21One">21</string>
    <string name="btn22One">22</string>
    <string name="btn23One">23</string>
    <string name="btn24One">24</string>
    <string name="btn25One">25</string>
    <string name="btn26One">26</string>
    <string name="btn27One">27</string>
    <string name="btn28One">28</string>
    <string name="btn29One">29</string>
    <string name="btn30One">30</string>
    <string name="number">3</string>
    <string name="btnDone">Done</string>
    <string name="btnCancel">Cancel</string>

    <string name="txtBookingDetails">Booking details</string>
    <string name="txtDate">Confirmed Date : Sat, 20th March 2021</string>
    <string name="txtdepartureTown">From :</string>
    <string name="txtDtown">Kottawa</string>
    <string name="txtArrivalTown">To :</string>
    <string name="txtAtown">Galle</string>
    <string name="txtBookingID">Booking ID :</string>
    <string name="txtNoA001">A001</string>
    <string name="txtBusTime">Bus time :</string>
    <string name="txttime">2.30 PM</string>
    <string name="txtBusNo">Bus no :</string>
    <string name="txtNoCBC3421">CBC3421</string>
    <string name="txtNumberOfTickets">Number of tickets :</string>
    <string name="txtNotickets3">3</string>
    <string name="txtTicketPrice">Ticket price :</string>
    <string name="txtprice200">Rs. 200.00</string>
    <string name="txtServicecharge">Service charge :</string>
    <string name="txtPrice20">Rs. 20.00</string>
    <string name="txtSeatNo">Seat no :</string>
    <string name="txtseatNo">6, 7, 8</string>
    <string name="txtAmount">Total amount : Rs.220.00</string>
    <string name="btnDownloadReceipt">Download Receipt</string>
    <string name="btnProceedtopayment">Proceed to payment</string>
    <string name="btnHome">Home</string>
    <string name="btnPreviousRides">Previous Rides</string>
    <string name="btnLogout">Log out</string>
    <string name="btnProfile">Profile</string>
    <string name="btnCommunicate">Communicate</string>
    <string name="btnViewProfile">View Profile</string>
    <string name="btnshare">Share</string>
    <string name="btnRateUs">Rate Us</string>
    <string name="txtAppName">Highway Go</string>
    <string name="txtFrom">"From : "</string>
    <string name="txtTo">To :</string>
    <string name="txtfrom">Form :</string>
    <string name="txtFromCity" />
    <string name="txtToCity" />
    <string name="txtJourneyDate">"Journey Date : "</string>
    <string name="txtjourneyDate">Journey Date :</string>
    <string name="btnSearchBus">Search Bus</string>
    <string name="txtBox" />
    <string name="txtBox1" />

    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="appName">Highway Go</string>
    <string name="txtAppNameHighwayGo">Highway Go</string>
    <string name="txtSlog">Choose possibility in every route.</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="from">From :</string>
    <string name="to">To :</string>

    <string-array name="fromCities">
        <item> Colombo </item>
        <item> Galle </item>
        <item> Kottawa </item>
        <item> Mathugama </item>
    </string-array>

    <string-array name="toCities">
        <item> Colombo </item>
        <item> Galle </item>
        <item> Kottawa </item>
        <item> Mathugama </item>
    </string-array>

</resources>
