<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home_icon"
            android:title="@string/btnHome" />

        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/history_icon"
            android:title="PreviousRides" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout_icon"
            android:title="@string/btnLogout" />

    </group>

    <group android:checkableBehavior="single">

    <item android:title="@string/btnProfile">

        <menu>

            <item
                android:id="@+id/nav_profile"
                android:icon="@drawable/profile_icon"
                android:title="@string/btnViewProfile" />

        </menu>

    </item>

    </group>

    <item android:title="@string/btnCommunicate">

        <menu>

            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/share_icon"
                android:title="@string/btnshare" />

            <item
                android:id="@+id/nav_rate"
                android:icon="@drawable/rate_icon"
                android:title="@string/btnRateUs" />


        </menu>

    </item>

</menu>